misc updates